# LogicHive

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  LogicHive.spec  README.md  SETUP_GUIDE.md  deploy.bat  deploy_error.txt  install.ps1  package.json  pyproject.toml  start_mcp.bat
.github/workflows/: ci.yml  google-cloud.yml  release.yml
backend/: main.py
backend/core/: auth.py  config.py  database.py  embedding.py  quality.py  security.py  security_audit.py  setup.py
backend/edge/: cleanup.py  coordinator.py  global_search.py  mcp_server.py  orchestrator.py  sync.py  triage.py  vector_db.py
backend/edge/runtime/: environment.py  runtime.py
backend/edge/transport/: background_server.py  coordinator.py
backend/hub/: Dockerfile  app.py  github_api.py  orchestrator.py  router.py
backend/hub/api/: api.py
backend/mcp_core/: server.py
backend/mcp_core/core/: config.py  vector_db.py
backend/mcp_core/engine/: cleanup.py  embedding.py  logic.py  router.py
backend/mcp_core/infra/: background_server.py  coordinator.py
dev_tools/: build_exe.py  cd_github.py  deploy.bat  deploy.py  dev.py  fix_imports.py  migrate_to_qdrant.py  security_audit_verify.py  setup_mcp.py  verify_hybrid.py  verify_save_draft.py  verify_smart_get.py
dev_tools/core/: dev.py  setup_mcp.py  start_mcp.bat
dev_tools/database/: diagnose_embeddings.py  populate_hub_with_real_logic.py  verify_v11_supabase.py
dev_tools/testing/: security_audit_verify.py  system_field_test.py  test_hub_integration.py  verify_invisible_master.py  verify_venv.py
dev_tools/testing/test_smart_get/local_pkg/: __init__.py
dev_tools/testing/tests/: conftest.py  test_ast_security.py  test_embedding_dimensions.py  test_intelligence_scoring.py  test_quality_gate.py
dev_tools/testing/tests/comprehensive/: test_gcp_push.py
dev_tools/testing/tests/e2e/: test_full_lifecycle.py  test_resilience.py
dev_tools/testing/tests/integration/: test_api.py  test_auth.py  test_save_gate.py  (+1 more)
dev_tools/tests/comprehensive/: test_gcp_push.py
dev_tools/tests/integration/: test_hub_edge_sync.py
dev_tools/tests/unit/: test_edge_sync_api.py  test_hub_push.py  test_quality_gate.py  test_security.py
docs/: VALUE_PROPOSITION.md  architecture_overview.md  edge_design.md  hub_design.md  システム詳細設計書.md
docs/Idea_Note/: 2月20日_メモ書き.md
ts-proxy/: package.json  test-e2e.js
ts-proxy/src/: index.ts
(+4 files in other folders)
