[project]
name = "logic-hive"
version = "0.1.0"
description = "LogicHive: Draft-First AI-Native Function Repository"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "duckdb",
    "psutil",
    "tqdm>=4.66.0",
    "ruff>=0.1.0",
    "fastapi",
    "uvicorn",
    "httpx",
    "google-genai",
    "bandit",
    "safety",
    "python-dotenv",
    "gitpython",
]

[project.scripts]
logic-hive = "edge.mcp_server:main"
logic-hive-setup = "dev_tools.setup_mcp:main"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["core", "hub", "edge"]

[tool.pytest.ini_options]
testpaths = ["dev_tools/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
addopts = "--basetemp=dev_tools/tests/test_data"